[package]
name = "colours-clarified"
version = "0.1.0"
edition = "2021"
description = "Colours that Just Work"
license = "MIT"
authors = ["Lily McCabe <lily@lilymccabe.ca>"]
repository = "https://github.com/LilyIsTrans/color-art"
readme = "README.md"
keywords = ["color", "art", "color-space", "color-art"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]
random = ["dep:rand"]

[dependencies]
rand = {version = "0.8", optional = true}
lazy_static = "1.4"
thiserror = "1.0.47"
serde = { version = "1.0.193", features = ["derive"] , optional = true}

[dev-dependencies]
serde_json = "1.0.108"
rand = "0.8"
